--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <form id="form" class="inputContainer">
+    <div id="form" class="inputContainer" novalidate>
         <label for="text-input">Chose a word</label>
         <input id="text-input" required>
         <button id="check-btn" type="submit">Submit</button>
-    </form>
+    </div>
     <span id="result"></span>
     
 
